[package]
name = "tosys"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]

[dependencies]
bootloader_precompiled = "0.2.0"
x86_64 = "0.2.8"
spin = "0.4.6"
volatile = "0.2.3"
pic8259_simple = "0.1.1"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
[package.metadata.bootimage]
default-target = "target.json"