[package]
name = "tosys"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]

[dependencies]
bootloader_precompiled = "0.3.0"
x86_64 = "0.4.2"
spin = "0.5.0"
volatile = "0.2.6"
pic8259_simple = "0.1.1"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
[package.metadata.bootimage]
default-target = "target.json"