[package]
name = "tosys"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]

[dependencies]
bootloader = { version = "0.8.1", features = ["map_physical_memory"]}
x86_64 = "0.7.5"
spin = "0.5.2"
volatile = "0.2.6"
pic8259_simple = "0.1.1"
linked_list_allocator = "0.6.4"
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
[package.metadata.bootimage]
default-target = "target.json"